css improvements. Fixed horizontal positioning of screenshots on mobile. Fixed scroll to learn more button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -852,7 +852,7 @@ section.feature.feature-2 .description:last-child, section.feature.feature-4 .de
   }
 
   section.feature.feature-2 .iphone, section.feature.feature-4 .iphone {
-      /*margin-left: 17.05961%;*/
+      margin-left: 17.05961%;
       /*margin: auto;*/
       /*float:none;*/
       margin-top: 0;
